# ai-lib

./: .gitignore  1-需求报告专业分析和建议.txt  2-核心：client构建和统一流式处理.txt  AI-Lib pre-v0.5.0 综合项目审查报告.txt  ARCHITECTURE.md  ARCHIVED_NOTICE.md  ARCHIVE_SUMMARY.md  BUILDER_PATTERN.md  CHANGELOG.md  CODE_FIRST_VALIDATION_IMPLEMENTATION.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_CODE_REVIEW_2025.md  CRITICAL_CODE_REVIEW_FEEDBACK.md  Cargo.toml  GROQ_MODEL_ISSUE_ANALYSIS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PHASES.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_SUMMARY.md  LICENSE-MIT  MANIFEST_FIRST_IMPLEMENTATION_PLAN_2025.md  MANIFEST_VALIDATION_DESIGN.md  MIGRATION_GUIDE.md  MODEL_OVERRIDE_IMPLEMENTATION_SUMMARY.md  PHASE0_COMPLETION_REPORT.md  PHASE1_CORE_RUNTIME_IMPLEMENTATION.md  PROJECT_COMPLETION_SUMMARY.md  PROXY_IMPROVEMENTS.md  PRO_FEATURES_ROADMAP.md  PR_0.2.0.md  QUICK_CHAT_TEXT_ANALYSIS.md  QUICK_CHAT_TEXT_FLOW.md  README_CN.md  RELEASE_0.1.0_DRAFT.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.2.20.md  RELEASE_SUMMARY_0.2.20.md  RESILIENCE_IMPLEMENTATION_REPORT.md  SUPPORT_POLICY.md  UPGRADE_0.2.0.md  (+24 more)
.github/: copilot-instructions.md
.github/workflows/: ai-api-docs-watch.yml  ci.yml  validate.yml
.runlogs/: cohere_basic_usage.txt  deepseek_basic_usage.txt  hello_groq.txt  mistral_basic_usage.txt  openai_basic_usage.txt
data/: api_doc_snapshots.json
docs/: ADDING_PROVIDERS.md  BENCH_CI_BASELINE.md  DEEPSEEK_FIX_SUMMARY.md  IMPORT_PATTERNS.md  IMPORT_PATTERNS_CN.md  MODULE_TREE_AND_IMPORTS.md  PERFORMANCE_METHODOLOGY_AND_INTERPRETATION.md  PR_0.2.0.md  REASONING_MODELS.md  RELEASE_NOTES_0.3.0-rc.1.md  RELEASE_STEPS_RC.md  RESPONSE_PARSING.md  UPGRADE_0.3.0.md  UPGRADE_0.4.0.md  UPGRADE_0.5.0.md  USING_WITH_OPENAI_COMPATIBLE_GATEWAYS.md
docs/_archived/: README.md  RELEASE_NOTES_0.3.0-rc.1.md  UPGRADE_0.2.0.md  UPGRADE_0.3.0.md  UPGRADE_1.0.0.md  action_completed_and_status_audited.md  action_plan_2025-11-27.md  implementation_plan.md  work_status_2025-11-26.md
docs/architecture/: ADR-001-hybrid-architecture.md  ADR-002-feature-flags.md  ADR-003-error-handling.md
examples/: README_REASONING.md  anthropic_streaming.rs  architecture_progress.rs  ascii_horse.rs  basic_usage.rs  batch_processing.rs  builder_pattern.rs  check_config.rs  cohere_basic_usage.rs  cohere_stream.rs  compare_requests.rs  concurrency_best_practices.rs  config_driven_example.rs  custom_provider.rs  custom_provider_injection.rs  custom_transport.rs  custom_transport_config.rs  debug_openai_transport.rs  debug_request.rs  deepseek_basic_usage.rs  deepseek_features.rs  deepseek_streaming.rs  explicit_config.rs  function_call_basic.rs  function_call_exec.rs  function_call_openai.rs  gemini_streaming.rs  hello_groq.rs  interceptors_circuit_breaker.rs  interceptors_default.rs  interceptors_minimal.rs  interceptors_pipeline.rs  interceptors_retry.rs  interceptors_timeout.rs  jsonl_streaming.rs  list_models_smoke.rs  manifest_streaming.rs  minimal.rs  mistral_basic_usage.rs  mistral_features.rs  (+36 more)
scripts/: ai_api_docs_watch.py
src/: client.rs  config.rs  lib.rs  metrics.rs
src/adapter/: dynamic.rs  mod.rs
src/agentic/: loop_engine.rs  mod.rs  state.rs  tool_orchestrator.rs
src/api/: chat.rs  mod.rs
src/builder/: mod.rs  payload.rs
src/circuit_breaker/: breaker.rs  config.rs  mod.rs  state.rs
src/client/: batch.rs  builder.rs  client_impl.rs  config_merger.rs  helpers.rs  manifest_client.rs  metadata.rs  mod.rs  model_options.rs  provider.rs  provider_factory.rs  registry_resolver.rs  request.rs  stream.rs  transport_builder.rs
src/client/builder/: interceptors.rs  mod.rs
src/config/: converter.rs  embedded.rs  file.rs  mod.rs  provider_trait.rs
src/config_hot_reload/: mod.rs
src/defaults/: aimanifest.yaml
src/error_handling/: context.rs  mod.rs  monitoring.rs  recovery.rs
src/interceptors/: breaker.rs  default.rs  mod.rs  rate_limit.rs  retry.rs  timeout.rs
src/manifest/: cli.rs  mod.rs  schema.rs  types.rs
src/mapping/: engine.rs  errors.rs  mod.rs  rules.rs
src/model/: catalog.rs  mod.rs  resolver.rs
src/observability/: mod.rs
src/provider/: ai21.rs  bedrock.rs  builders.rs  chat_provider.rs  classification.rs  cohere.rs  config.rs  configs.rs  gemini.rs  generic.rs  mistral.rs  mod.rs  models.rs  openai.rs  perplexity.rs  pricing.rs  utils.rs
src/provider/strategies/: builder.rs  failover.rs  health.rs  mod.rs  round_robin.rs
src/rate_limiter/: backpressure.rs  config.rs  mod.rs  token_bucket.rs
src/registry/: mod.rs  model.rs  watcher.rs
src/response_parser/: mod.rs
src/sse/: jsonl_parser.rs  mod.rs  parser.rs
src/streaming/: decoder.rs  events.rs  mod.rs  parser.rs  pipeline.rs
src/transport/: client_factory.rs  dyn_transport.rs  error.rs  http.rs  mod.rs
src/types/: common.rs  error.rs  function_call.rs  mod.rs  request.rs  response.rs
src/utils/: file.rs  mod.rs  path_mapper.rs  template.rs
tests/: architecture_test.rs  ascii_horse_flow_tests.rs  batch_processing_test.rs  boundary_condition_tests.rs  builder_interceptor_test.rs  config_validation_tests.rs  context_control_tests.rs  cost_and_routing.rs  function_call_integration.rs  function_call_tests.rs  generic_adapter_upload_tests.rs  improvements_test.rs  integration_config_driven_openai.rs  legacy_sse_sequence.rs  manifest_validator.rs  metrics_tests.rs  multimodal_file_tests.rs  openai_adapter_upload_tests.rs  openai_upload_tests.rs  override_precedence_tests.rs  pro_features_test.rs  resilience_integration_test.rs  resilience_tests.rs  response_parser_tests.rs  retry_test.rs  routing_strategy_tests.rs  sse_golden_tests.rs  sse_md5_consistency.rs  sse_parser_tests.rs  sse_regression.rs  strategy_tests.rs  streaming_golden_cases.rs  transport_tests.rs  usage_status_tests.rs  wiremock_routes.rs
tests/utils/: mock_transport.rs
