[package]
name = "ai-lib-pro"
version = "0.1.0"
edition = "2021"
authors = ["AI-lib PRO Contributors"]
description = "Enterprise-grade extensions for ai-lib - advanced routing, observability, and management features"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hiddenpath/ai-lib-pro"
homepage = "https://www.ailib.info/pro"
documentation = "https://docs.rs/ai-lib-pro"
keywords = ["ai", "llm", "enterprise", "routing", "observability", "management"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
ai-lib = { path = "../ai-lib", features = ["full"] } # Path dependency to the OSS library

[features]
default = []
# PRO feature sets
pricing_catalog = []
routing_advanced = []
observability_pro = []
quota = []
audit = []
kms = []
config_hot_reload_pro = []
# Convenience feature to enable all PRO features
full = ["pricing_catalog", "routing_advanced", "observability_pro", "quota", "audit", "kms", "config_hot_reload_pro"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }