[package]
name = "ai-lib"
version = "0.4.0"
edition = "2021"
authors = ["AI-lib Contributors"]
description = "A unified AI SDK for Rust providing a single interface for multiple AI providers with hybrid architecture"
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/hiddenpath/ai-lib"
homepage = "https://www.ailib.info"
documentation = "https://docs.rs/ai-lib"
keywords = ["ai", "llm", "api", "agent", "unify"]
categories = ["api-bindings", "web-programming::http-client"]
include = [
    "src/**/*",
    "examples/*.rs",
    "Cargo.toml",
    "readme.md",
    "README_CN.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "CHANGELOG.md",
    "docs/USING_WITH_OPENAI_COMPATIBLE_GATEWAYS.md",
    "docs/REASONING_MODELS.md",
    "docs/UPGRADE_0.2.0.md",
    "docs/UPGRADE_0.3.0.md",
    "docs/UPGRADE_0.4.0.md",
    "docs/RELEASE_NOTES_0.3.0-rc.1.md"
]
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.0"
schemars = "0.8"
validator = { version = "0.16", features = ["derive"] }
regex = "1"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.16"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures = "0.3"
reqwest-eventsource = "0.6"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
chrono = { version = "0.4.42", features = ["serde"] }
backoff = { version = "0.4", features = ["tokio"] }
bytes = "1.4"
base64 = "0.22.1"
httpmock = "0.7.0"
tracing = "0.1"
once_cell = "1.18"
dashmap = "5.5"  # Concurrent HashMap for lock-free reads
notify = { version = "6.1", optional = true }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
md5 = "0.8.0"
wiremock = "0.5.22"

[features]
# No default features to keep OSS core lean; opt-in progressive complexity
default = []
# Enable adapter modules for internal/testing usage only. Not recommended for application code.
internal_adapters = []

# Interceptor pipeline (retry, rate limiters, circuit breaker wiring lives behind this)
interceptors = []

# Unified reqwest client factory/shared transport settings
unified_transport = []

# Common SSE parser used by adapters (feature-gated until wiring is complete)
unified_sse = []

# Minimal cost accounting metrics (env-driven rates)
cost_metrics = []

# Strategy-based routing MVP
routing_mvp = []

# Observability interfaces (Tracer, AuditSink)
observability = []

# Config hot-reload traits (ConfigProvider/Watcher)
config_hot_reload = ["dep:notify"]

# Response parsing utilities for structured outputs
response_parser = []

# Convenience alias features for developer ergonomics
# These do not add code, just enable existing granular features in groups
streaming = ["unified_sse"]
transport = ["unified_transport"]
resilience = ["interceptors"]
hot_reload = ["config_hot_reload"]
all = [
    "interceptors",
    "unified_transport",
    "unified_sse",
    "cost_metrics",
    "routing_mvp",
    "observability",
    "config_hot_reload",
]

# Phase 3: Optimized release profile for production performance
[profile.release]
opt-level = 3           # Maximum optimizations
lto = "thin"            # Thin LTO for faster builds with good optimization
codegen-units = 16      # Balance between compile time and runtime performance
strip = false           # Keep symbols for better debugging (users can strip if needed)

[profile.bench]
inherits = "release"

# Optimize dependencies in dev mode for faster iteration
[profile.dev.package."*"]
opt-level = 2

